cmake_minimum_required(VERSION 3.2)
project(ch06 CXX C)
set(CMAKE_CXX_STANDARD 11)
include_directories(comm)
include_directories(chapter)
#add_executable(ex6_4 ex6_4.cpp ex6_6.cpp)
#add_executable(ex6_5 ex6_5.cpp comm/comm.h)
#add_executable(ex6_6 ex6_6.cpp comm/comm.h)
#add_executable(ex6_7 ex6_7.cpp comm/comm.h chapter/chapter6.h fact.cpp factMain.cpp)
#add_executable(ex6_9 comm/comm.h chapter/chapter6.h fact.cpp factMain.cpp)
#add_executable(ex6_10 ex6_10.cpp)
#add_executable(ex6_11 ex6_11.cpp)
#add_executable(ex6_12 ex6_12.cpp)
#add_executable(ex6_17 ex6_17.cpp)
#add_executable(ex6_21 ex6_21.cpp)
#add_executable(ex6_22 ex6_22.cpp)
#add_executable(ex6_23 ex6_23.cpp)
add_executable(ex6_25 ex6_25.cpp)

