cmake_minimum_required(VERSION 3.2)
project(ch06 CXX C)
set(CMAKE_CXX_STANDARD 11)
include_directories(comm)
include_directories(chapter)
#add_executable(ex6_4 ex6_4.cpp ex6_6.cpp)
#add_executable(ex6_5 ex6_5.cpp comm/comm.h)
#add_executable(ex6_6 ex6_6.cpp comm/comm.h)
#add_executable(ex6_7 ex6_7.cpp comm/comm.h chapter/chapter6.h fact.cpp factMain.cpp)
#add_executable(ex6_9 comm/comm.h chapter/chapter6.h fact.cpp factMain.cpp)
#add_executable(ex6_10 ex6_10.cpp)
#add_executable(ex6_11 ex6_11.cpp)
#add_executable(ex6_12 ex6_12.cpp)
#add_executable(ex6_17 ex6_17.cpp)
#add_executable(ex6_21 ex6_21.cpp)
#add_executable(ex6_22 ex6_22.cpp)
#add_executable(ex6_23 ex6_23.cpp)
#add_executable(ex6_25 ex6_25.cpp)
#add_executable(ex6_27 ex6_27.cpp)
#add_executable(ex6_32 ex6_32.cpp)
#add_executable(ex6_33 ex6_33.cpp)
#add_executable(ex6_34 ex6_34.cpp)
#add_executable(ex6_36 ex6_36.cpp ex6_42.cpp)
#add_executable(ex6_42 ex6_42.cpp)
#add_executable(ex6_45 ex6_45.cpp)
#add_definitions("-DDEBUG")
#add_executable(ex6_47 ex6_47.cpp)
#add_executable(ex6_50 ex6_50.cpp)
add_executable(ex6_54 ex6_54.cpp)


