cmake_minimum_required(VERSION 3.2)
project(ch07)
set(CMAKE_CXX_STANDARD 11)
include_directories(comm)
#add_executable(ex7_01 ex7_01.cpp)
#add_executable(ex7_03 ex7_03.cpp)
#add_executable(ex7_07 ex7_07.cpp)
#add_executable(ex7_11 ex7_11.cpp)
#add_executable(ex7_27 ex7_27.cpp)
#add_executable(ex7_28 ex7_28.cpp)
#add_executable(ex7_37 ex7_37.cpp)
#add_executable(ex7_37 ex7_37.cpp)
#add_executable(ex7_43 ex7_43.cpp)
#add_executable(ex7_52 ex7_52.cpp)
add_executable(ex7_55 ex7_55.cpp)

