cmake_minimum_required(VERSION 3.2)
project(ch10)
set(CMAKE_CXX_STANDARD 11)
#add_executable(ex10_1 ex10_1.cpp)
#add_executable(ex10_2 ex10_2.cpp)
#add_executable(ex10_3 ex10_3.cpp)
#add_executable(ex10_4 ex10_4.cpp)
#add_executable(ex10_5 ex10_5.cpp)
#add_executable(ex10_6 ex10_6.cpp)
#add_executable(ex10_7 ex10_7.cpp)
#add_executable(ex10_9 ex10_9.cpp)
#add_executable(ex10_11 ex10_11.cpp)
add_executable(ex10_12 ex10_12.cpp)
