cmake_minimum_required(VERSION 3.2)
project(ch10)
set(CMAKE_CXX_STANDARD 11)
#add_executable(ex10_1 ex10_1.cpp)
#add_executable(ex10_2 ex10_2.cpp)
#add_executable(ex10_3 ex10_3.cpp)
#add_executable(ex10_4 ex10_4.cpp)
#add_executable(ex10_5 ex10_5.cpp)
#add_executable(ex10_6 ex10_6.cpp)
#add_executable(ex10_7 ex10_7.cpp)
#add_executable(ex10_9 ex10_9.cpp)
#add_executable(ex10_11 ex10_11.cpp)
#add_executable(ex10_12 ex10_12.cpp)
#add_executable(ex10_13 ex10_13.cpp)
#add_executable(ex10_14 ex10_14.cpp)
#add_executable(ex10_15 ex10_15.cpp)
#add_executable(ex10_16 ex10_16.cpp)
#add_executable(ex10_17 ex10_17.cpp)
#add_executable(ex10_18 ex10_18.cpp)
#add_executable(ex10_19 ex10_19.cpp)
#add_executable(ex10_20 ex10_20.cpp)
#add_executable(ex10_21 ex10_21.cpp)
#add_executable(ex10_22 ex10_22.cpp)
#add_executable(ex10_23 ex10_23.cpp)
#add_executable(ex10_25 ex10_25.cpp)
#add_executable(ex10_27 ex10_27.cpp)
#add_executable(ex10_28 ex10_28.cpp)
#add_executable(ex10_29 ex10_29.cpp)
#add_executable(ex10_30 ex10_30.cpp)
#add_executable(ex10_31 ex10_31.cpp)
add_executable(ex10_32 ex10_32.cpp)
