cmake_minimum_required(VERSION 3.2)
project(ch11)
set(CMAKE_CXX_STANDARD 11)
#add_executable(ex11_3 ex11_3.cpp)
#add_executable(ex11_9 ex11_9.cpp)
#add_executable(ex11_10 ex11_10.cpp)
#add_executable(ex11_11 ex11_11.cpp)
#add_executable(ex11_20 ex11_20.cpp)
#add_executable(ex11_23 ex11_23.cpp)
#add_executable(ex11_31 ex11_31.cpp)
#add_executable(ex11_32 ex11_32.cpp)
add_executable(ex11_33 ex11_33.cpp)
