cmake_minimum_required(VERSION 3.2)
project(ch12)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXHHFLAGS} -O3 -Wall")
#add_executable(ex12_2 ex12_2.cpp)
#add_executable(ex12_6 ex12_06.cpp)
#add_executable(ex12_7 ex12_7.cpp)
#add_executable(ex12_10 ex12_10.cpp)
#add_executable(ex12_14 ex12_14.cpp)
#add_executable(ex12_15 ex12_15.cpp)
#add_executable(ex12_20 ex12_20.cpp)
#add_executable(ex12_23 ex12_23.cpp)
#add_executable(ex12_24 ex12_24.cpp)
#add_executable(ex12_26 ex12_26.cpp)
#add_executable(ex12_27_test ex12_27_test.cpp)
#add_executable(ex12_28 ex12_28.cpp)
add_executable(ex12_29 ex12_29.cpp)
#add_executable(test_vector test_vector.cpp)
#add_executable(test_size_type test_size_type.cpp)
