cmake_minimum_required(VERSION 3.2)
project(ch13)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#add_executable(ex13_5 ex13_5.cpp)
#add_executable(ex13_8 ex13_8.cpp)
add_executable(ex13_13 ex13_13.cpp)
