cmake_minimum_required(VERSION 3.2)
project(ch13)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#add_executable(ex13_5 ex13_5.cpp)
#add_executable(ex13_8 ex13_8.cpp)
#add_executable(ex13_13 ex13_13.cpp)
#add_executable(ex13_17 ex13_17.cpp)
#add_executable(ex13_17_1 ex13_17_1.cpp)
#add_executable(ex13_17_2 ex13_17_2.cpp)
#add_executable(ex13_17_3 ex13_17_3.cpp)
#add_executable(ex13_18 ex13_18_Test.cpp ex13_18.cpp)
#add_executable(ex13_21_test_main ex13_21_Test_main.cpp)
#add_executable(ex13_22 ex13_22_test.cpp)
#add_executable(ex13_26 ex13_26_test.cpp ex13_26.cpp)
#add_executable(ex13_27 ex13_27_test.cpp ex13_27.cpp)
#add_executable(ex13_28 ex13_28.cpp)
#add_executable(ex13_30 ex13_30_test.cpp ex13_30.cpp)
#add_executable(ex13_31 ex13_31_test.cpp ex13_31.cpp)
#add_executable(ex13_34 ex13_34.cpp)
#add_executable(ex13_39 ex13_39.cpp)
#add_executable(ex13_44 ex13_44.cpp ex13_44_main.cpp)
#add_executable(ex13_44 ex13_44_47.cpp ex13_44_main.cpp)
#add_executable(ex13_48 ex13_44_47.cpp ex13_48.cpp)
add_executable(ex13_53 ex13_53_main.cpp ex13_53.cpp)
