cmake_minimum_required(VERSION 3.2)
project(ch14)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_BUILD_TYPE "Debug")
set(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")

set(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#add_executable(ex14_2 ex14_2.cpp ex14_2_test.cpp)
#add_executable(ex14_5 ex14_5.cpp ex14_5_test.cpp)
#add_executable(ex14_7 ex14_7.cpp ex14_7_test.cpp)
#add_executable(ex14_22 ex14_22.cpp ex14_22_test.cpp)
#add_executable(ex14_26 ex14_26_String.cpp ex14_26_StringTest.cpp)
#add_executable(ex14_27_28 ex14_27_28_StrBlob.cpp ex14_27_28_StrBlobTest.cpp)
#add_executable(ex14_30 ex14_30_StrBlob.cpp ex14_30_StrBlobTest.cpp)
add_executable(ex14_32 ex14_30_StrBlob.cpp ex14_32.cpp)

